--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -2,9 +2,6 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Traffic Stop Heat Map</title>
-
     <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -45,27 +42,28 @@
                         <ul class="dropdown-menu">
                                 <li><a href="/dowBar">Day of Week Bar Graph</a></li>
                                 <li><a href="/line">Citations by Month Graph</a></li>
-                                <li><a href="/pie">Gender Pie Graph</a></li></li>
-                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li></li>
+                                <li><a href="/pie">Gender Pie Graph</a></li>
+                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
                         </ul>
                     </li>
                     <li>
-                            <a href="/neighborhoodmap">Neighborhood Map</a>
-                        </li>
-                        <li>
-                            <a href="/map">Heat Map</a>
+                        <a href="/neighborhoodmap">Neighborhood Map</a>
+                    </li>
+                    <li>
+                        <a href="/map">Heat Map</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div id="heatmap"></div>
-    <script type="text/javascript" src="../static/js/config.js"></script>
-    <script type="text/javascript" src="../static/js/heatmap.js"></script>
-    <script type="text/javascript" src="../static/js/leaflet-heat.js"></script>
+    <script type="text/javascript" src="/static/js/config.js"></script>
+    <script type="text/javascript" src="/static/js/heatmap.js"></script>
+    <script type="text/javascript" src="/static/js/leaflet-heat.js"></script>
 
-</body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+</body>
 </html>
