--- a/templates/map.html
+++ b/templates/map.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
-    <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 
 <body>
@@ -48,8 +48,8 @@
                         <ul class="dropdown-menu">
                                 <li><a href="/dowBar">Day of Week Bar Graph</a></li>
                                 <li><a href="/line">Citations by Month Graph</a></li>
-                                <li><a href="/pie">Gender Pie Graph</a></li></li>
-                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li></li>
+                                <li><a href="/pie">Gender Pie Graph</a></li>
+                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
                         </ul>
                     </li>
                     <li>
@@ -63,11 +63,12 @@
         </div>
     </nav>
     <div id="map"></div>
-    <script type="text/javascript" src="../static/js/config.js"></script>
-    <script type="text/javascript" src="../static/js/neighborhoodmap.js"></script>
-    <script type="text/javascript" src="../static/js/raphael.js"></script>
-</body>
+    <script type="text/javascript" src="/static/js/config.js"></script>
+    <script type="text/javascript" src="/static/js/neighborhoodmap.js"></script>
+    <script type="text/javascript" src="/static/js/raphael.js"></script>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
+</body>
 </html>
