--- a/templates/line.html
+++ b/templates/line.html
@@ -17,6 +17,14 @@
     <script src="https://d3js.org/d3-selection.v1.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/d3Style.css">
+
 </head>
 
 <body>
@@ -64,6 +72,13 @@
         <div id="line">
         </div>
     </div>
+
+    <!-- <div style="width: 100%; height: 100%;"> -->
+    <canvas id="myChart"></canvas>
+    <!-- style="width: 100%; height: 100%;" -->
+
+    <!-- </div> -->
+    <div id="js-legend" class="chart-legend"></div>
 
     <!--Source for line chart-->
     <script src="/static/js/line.js"></script>
