--- a/templates/piechart.html
+++ b/templates/piechart.html
@@ -12,13 +12,13 @@
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-    
+        
       <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/d3Style.css">
-
+    
 </head>
 
 <body>
@@ -35,7 +35,7 @@
 
                 <!-- neighborhood1 selection happens here -->
 
-                <select id="selDataset1" onchange="selectChanged(this.value)"></select>
+                <select id="selDataset1" onchange="buildCharts(this.value)"></select>
 
               </div>
 
@@ -46,16 +46,16 @@
         <div id="pie"></div>
 
       </div>
-
+   
     <!-- plotly script -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-   
+
     <!-- D3 scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
 
     <!-- Graph script -->
-    <script type="text/javascript" src="../static/js/piechart1.js"></script>
-    
+    <script type="text/javascript" src="../static/js/piechart2.js"></script>
+   
 </body>
 
 </html>
