--- a/templates/piechart.html
+++ b/templates/piechart.html
@@ -22,7 +22,54 @@
 </head>
 
 <body>
+ <nav class="navbar navbar-inverse">
 
+        <div class="container-fluid">
+
+            <div class="navbar-header">
+
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+                        <span class="sr-only">Toggle navigation</span>
+
+                        <span class="icon-bar"></span>
+
+                        <span class="icon-bar"></span>
+
+                        <span class="icon-bar"></span>
+
+                </button>
+
+                <a class="navbar-brand" href="/">Minneapolis Police Stop Analysis</a>
+
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li class="dropdown">
+
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Visualizations
+
+                            <span class="caret"></span>
+
+                        </a>
+
+                        <ul class="dropdown-menu">
+
+                                <li><a href="/dowBar">Day of Week Bar Graph</a></li>
+
+                                <li><a href="/line">Citations by Month Graph</a></li>
+
+                                <li><a href="/pie">Neighborhood Pie Graph</a></li>
+
+                                <li><a href="/popstop">Stop / Population Ratio Graph</a></li>
+
+                        </ul>
+
+                    </li>
+                    
     <div class="container">
 
         <div class="row">
