--- a/copstop/templates/index.html
+++ b/copstop/templates/index.html
@@ -53,7 +53,7 @@
             <div class="col-md-12">
                 <div class="graph graph-left">
                         <section id="intro">
-                            <h1>Team Bostock: Minneapolis Traffic Stop Data Analysis</h1>
+                            <h1>Minneapolis Traffic Stop Data Analysis</h1>
                             <hr>
                             <section id="text">
                                 <img id="summary-image" src="/static/images/MplsSL.jpg " alt="Minneapolis-Image ">
