--- a/copstop/templates/index.html
+++ b/copstop/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="Bootstrap Visualization Dashboard" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Minneapolis Neighborhoods</title>
+    <title>Minneapolis Traffic Stops</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="weather.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
@@ -24,7 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Minneapolis Police Stop Analysis</a>
+                <a class="navbar-brand" href="/">Minneapolis Traffic Stop Analysis</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -53,7 +53,7 @@
             <div class="col-md-12">
                 <div class="graph graph-left">
                         <section id="intro">
-                            <h1>Minneapolis Traffic Stop Data Analysis</h1>
+                            <h1>Minneapolis Traffic Stop Analysis</h1>
                             <hr>
                             <section id="text">
                                 <img id="summary-image" src="/static/images/MplsSL.jpg " alt="Minneapolis-Image ">
